test/zalupaartem/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zalupaartem-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: zalupaartem.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zalupaartem-service
                port:
                  number: 443
  ingressClassName: nginx
