test/zalupaartem/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: zalupaartem-service
  labels:
    app: zalupaartem

spec:
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 3000
      # externalIP: 192.168.88.1
  selector:
    app: zalupaartem
  type: ClusterIP
